2007-05-15  Ville Vainio  <vivainio@gmail.com>

	* pycolorize.py, pycolor.1: Paul Mueller's patches that
	make pycolorize read input from stdin when run without arguments.
	
	* Magic.py: do not require 'PATH' in %rehash/%rehashx. Closes #155

2007-05-10  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/rlineimpl.py: check for clear_history in readline and
	make it a dummy no-op if not available.  This function isn't
	guaranteed to be in the API and appeared in Python 2.4, so we need
	to check it ourselves.  Also, clean up this file quite a bit.

	* ipython.1: update man page and full manual with information
	about threads (remove outdated warning).  Closes #151.

2007-05-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Extensions/ipy_constants.py: Add Gael's constants module
	in trunk (note that this made it into the 0.8.1 release already,
	but the changelogs didn't get coordinated).  Many thanks to Gael
	Varoquaux <gael.varoquaux-AT-normalesup.org>

2007-05-09  *** Released version 0.8.1

2007-05-10  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/igrid.py: Incorporate html help into
	the module, so we don't have to search for the file.

2007-05-02  Fernando Perez  <Fernando.Perez@colorado.edu>

	* test/test_irunner.py (RunnerTestCase._test_runner): Close #147.

2007-04-30  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: (pre_config_initialization) Catch UnicodeDecodeError if the
	user has illegal (non-ascii) home directory name

2007-04-27  Ville Vainio  <vivainio@gmail.com>

	* platutils_win32.py: implement set_term_title for windows
	
	* Update version number
	
	* ipy_profile_sh.py: more informative prompt (2 dir levels)

2007-04-26  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/igrid.py: (igrid) Fix bug that surfaced
	when the igrid input raised an exception. (Patch by Nik Tautenhahn,
	bug discovered by Ville).

2007-04-26  Ville Vainio  <vivainio@gmail.com>
