@@ -4,6 +4,9 @@
 	make pycolorize read input from stdin when run without arguments.
 	
 	* Magic.py: do not require 'PATH' in %rehash/%rehashx. Closes #155
+	
+	* ipy_rehashdir.py: rename ext_rehashdir to ipy_rehashdir, import
+	it in sh profile (instead of ipy_system_conf.py).
 
 2007-05-10  Fernando Perez  <Fernando.Perez@colorado.edu>
 
